# lattice_dmet

./: .gitignore  .travis.yml  README.md  diis.py  dmetTI.py  environment.yml  ftdmetTI.py  ftmodules.py  pyproject.toml  requirements.txt  setup.py  utils.py
examples/: hub1d.py  hub2d.py
latdmet/: utils.py
latdmet/meanfields/: __init__.py  hartreefock.py
latdmet/minimizers/: minbfgs_bcs.py  minlsq_bcs.py
latdmet/minimizers/bfgs/: bfgs.py  lnsrch.py
latdmet/misc/: __init__.py  hublocalizer.py
latdmet/solvers/: __init__.py  itensor_adaptor.py  solver_bcs_bk.py  solver_fci_bcs.py  solver_simple_bcs.py
ldmet/: __init__.py  dmet.py  dmet_old.py  ftdmetTI.py  routine.py  simple_dmet.ipynb
ldmet/helpers/: grep.py  transform.py  utils.py
ldmet/loggers/: simpleLogger.py
ldmet/meanfields/: fthartreefock_k.py  meanfield.py
ldmet/minimizers/: ftminbfgs.py
ldmet/misc/: kspace.py
ldmet/old/: dmet_old.py
ldmet/solvers/: meanfield.py  solver_mps.py
ldmet/system/: __init__.py
loggers/: simpleLogger.py
meanfields/: fthartreefock.py  hartreefock.py  meanfield.py
minimizers/: __init__.py  ftminbfgs.py  ftminbfgsR.py  ftminlsq.py
minimizers/bfgs/: __init__.py
orderp/: calcbcso.py
solvers/: ftsolver_fci.py  ftsolver_mps.py  ftsolver_simple.py  itensor_adaptor.py
system/: corrpot.py  hamiltonian.py
tutorials/: one_shot_dmet.ipynb
