[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldmet"
version = "0.0.1"
description = "DMET package for lattice models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Chong Sun", email = "sunchong137@gmail.com" }
]
dependencies = [
  "numpy>=1.25.2",
  "scipy>=1.11.2",
  "pyscf>=2.3.0"
]

[tool.setuptools.packages]
find = {}

